fixed cropping bug

--- a/homepage/assets/css/main.css
+++ b/homepage/assets/css/main.css
@@ -1379,6 +1379,7 @@ section{
 				transition: opacity 0.5s ease-in-out;
 				position: absolute;
 				Left: 0px;
+				top: 5%;
 				width: 100%;
 				height: 100%;
 				background-repeat: no-repeat;
